# yastas-fastapi-postgresql

./: .gitignore
.github/workflows/: pr.yml
{{cookiecutter.project_slug}}/app/: pyproject.toml
{{cookiecutter.project_slug}}/app/app/: container.py  main.py  utils.py
{{cookiecutter.project_slug}}/app/app/api/: deps.py
{{cookiecutter.project_slug}}/app/app/api/api_v1/endpoints/: items.py
{{cookiecutter.project_slug}}/app/app/core/: security.py
{{cookiecutter.project_slug}}/app/app/crud/: crud_user.py
{{cookiecutter.project_slug}}/app/app/tests/: conftest.py
{{cookiecutter.project_slug}}/app/app/tests/api/api_v1/: test_items.py
{{cookiecutter.project_slug}}/app/app/tests/crud/: test_item.py
{{cookiecutter.project_slug}}/app/app/tests/utils/: user.py
{{cookiecutter.project_slug}}/scripts/: test.sh
